--- a/linux-rtk/arch/arm64/configs/rtd129x_bpi_defconfig
+++ b/linux-rtk/arch/arm64/configs/rtd129x_bpi_defconfig
@@ -2965,12 +2965,14 @@ CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_VIDEO_V4L2=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
+# CONFIG_VIDEO_PCI_SKELETON is not set
 CONFIG_VIDEO_TUNER=m
-CONFIG_VIDEOBUF_GEN=m
+CONFIG_VIDEOBUF_GEN=y
 CONFIG_VIDEOBUF_VMALLOC=m
 CONFIG_VIDEOBUF_DVB=m
 CONFIG_VIDEOBUF2_CORE=y
 CONFIG_VIDEOBUF2_MEMOPS=y
+CONFIG_VIDEOBUF2_DMA_CONTIG=y
 CONFIG_VIDEOBUF2_VMALLOC=y
 CONFIG_DVB_CORE=y
 CONFIG_DVB_NET=y
@@ -3103,7 +3105,7 @@ CONFIG_VIDEO_EM28XX_RC=m
 CONFIG_RTK_HDMITX=y
 # CONFIG_RTK_HDCP_1x is not set
 # CONFIG_RTK_HDCP_1x_TEE is not set
-# CONFIG_RTK_HDMIRX is not set
+CONFIG_RTK_HDMIRX=y
 # CONFIG_RTK_HDCP1x_REPEATER is not set
 # CONFIG_RTK_HDCPRX_1P4_TEE is not set
 # CONFIG_RTK_HDCPRX_2P2 is not set
